--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~49.0.0",
+    "expo-secure-store": "^14.2.3",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-web": "0.19.6",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.12",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.5.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
-    "nativewind": "^2.0.11"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
