--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.22.0",
