--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "lawnibly",
     "version": "1.0.0",
     "sdkVersion": "49.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": ["ios", "android", "web"],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -24,6 +24,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
-    }
+    },
+    "jsEngine": "jsc"
   }
 }
